- spacing adjustments for welcome messages - fix header logo width

--- a/source/stylesheets/layout.css.sass
+++ b/source/stylesheets/layout.css.sass
@@ -152,7 +152,7 @@ header
         display: block
         max-height: 66px
         max-width: 208px
-        width: auto
+        width: 100%
 
   .sections
     float: left
@@ -300,11 +300,14 @@ header
     width: 100%
     
     p
-      +font-size(14)
+      +font-size(14,20)
       font-weight: 600
-      line-height: 12px
-      padding-top: 16px
+      line-height: 18px
+      padding: 20px 16px 0px
       text-transform: uppercase
+      
+      @media only screen and (max-width:$breakpoint-small)
+        line-height: 1.75rem
 
     h2
       +font-size(64)
@@ -313,8 +316,10 @@ header
       text-transform: uppercase
 
       @media only screen and (max-width:$breakpoint-small)
-        +font-size(42)
+        font-size: 2.6rem
         letter-spacing: 0
+        line-height: 3.5rem
+        padding: 0 16px
         text-indent: 0
         white-space: normal
 
